--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -5,15 +5,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>589</width>
-    <height>460</height>
+    <width>506</width>
+    <height>396</height>
    </rect>
-  </property>
-  <property name="minimumSize" >
-   <size>
-    <width>589</width>
-    <height>460</height>
-   </size>
   </property>
   <property name="windowTitle" >
    <string>Задача коммивояжера</string>
@@ -92,6 +86,12 @@
             <property name="minimum" >
              <number>3</number>
             </property>
+            <property name="maximum" >
+             <number>5</number>
+            </property>
+            <property name="value" >
+             <number>5</number>
+            </property>
            </widget>
           </item>
           <item>
@@ -110,7 +110,27 @@
          </layout>
         </item>
         <item>
-         <widget class="QTableView" name="tableTask" />
+         <widget class="QTableWidget" name="tableTask" >
+          <property name="selectionMode" >
+           <enum>QAbstractItemView::NoSelection</enum>
+          </property>
+          <property name="rowCount" >
+           <number>5</number>
+          </property>
+          <property name="columnCount" >
+           <number>5</number>
+          </property>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <row/>
+          <column/>
+          <column/>
+          <column/>
+          <column/>
+          <column/>
+         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" >
@@ -199,7 +219,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>589</width>
+     <width>506</width>
      <height>21</height>
     </rect>
    </property>
