Fixed random number generation algorithm (didn't work at all in linux).

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -451,6 +451,9 @@
    <property name="text" >
     <string>&amp;Про...</string>
    </property>
+   <property name="statusTip" >
+    <string>Получить информацию о программе</string>
+   </property>
   </action>
   <action name="actionFileExit" >
    <property name="icon" >
