--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -116,29 +116,13 @@
          </layout>
         </item>
         <item>
-         <widget class="QTableWidget" name="tableTask" >
+         <widget class="QTableView" name="taskView" >
           <property name="statusTip" >
            <string>Стоимости переходов/переездов из города в город</string>
           </property>
           <property name="selectionMode" >
            <enum>QAbstractItemView::NoSelection</enum>
           </property>
-          <property name="rowCount" >
-           <number>5</number>
-          </property>
-          <property name="columnCount" >
-           <number>5</number>
-          </property>
-          <row/>
-          <row/>
-          <row/>
-          <row/>
-          <row/>
-          <column/>
-          <column/>
-          <column/>
-          <column/>
-          <column/>
          </widget>
         </item>
         <item>
